stretched finished somewhat

--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>DOM I</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="digits">
@@ -12,5 +12,10 @@
       <div class="digit" id="msHundreds">-</div>
       <div class="digit" id="msTens">-</div>
     </div>
+    <div class="button">
+      <button onclick="startTimer();" type="button" name="button">START</button>
+      <button onclick="stopTimer();" type="button" name="button">STOP</button>
+    </div>
   </body>
+  <script src="index.js" type="text/javascript"></script>
 </html>
